# swarm

./: .env.exmaple  .env.local  .env.sample  .gitignore  CHANGELOG.md  Makefile  README.md  agent_config.json  config.json  llm_config.json  main.py  pyproject.toml  tmp.py
docs/: exception_handling_guide.md
examples/: basic_usage.py  html_analyzer_usage.py  llm_usage.py  mcp_client_example.py  mcp_integration.md  smart_search_demo.py
swarm/: __init__.py  __main__.py  main.py
swarm/cli/: __init__.py  main.py
swarm/cli/commands/: __init__.py  browse.py  interactive.py  mcp_server.py  research.py  research_assistant.py  search.py
swarm/core/: __init__.py  config.py  exceptions.py  services.py
swarm/llm/: __init__.py  anthropic_client.py  base.py  client.py  deepseek_client.py  factory.py  gemini_client.py  openai_client.py  qwen_client.py
swarm/mcp_tools/: __init__.py  server.py
swarm/research/: __init__.py  analyzer.py  assistant.py  extractor.py  formatter.py  image_processor.py  language.py
swarm/utils/: __init__.py  exception_handler.py  helpers.py  logging.py  streaming.py
swarm/web/: __init__.py  browser.py  search.py
swarm/web/browser/: README.md  __init__.py  browser.py  extractor.py  interactor.py  navigator.py  session.py  utils.py
swarm/web_broswer/: __init__.py  action_planner.py  html_analyzer.py  selenium_executor.py  web_actions.py
tests/: __init__.py  test_config.py  test_mcp_server.py
