[project]
name = "swarm"
version = "0.1.0"
description = "A comprehensive platform for multi-LLM integration and canvas-like applications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core dependencies for LLM module
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.5.0",
    # Image processing for multimodal (optional)
    "Pillow>=10.0.0",
    # Data handling
    "pydantic>=2.0.0",
    # Async support
    "aiohttp>=3.8.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
swarm = "swarm.main:main"
